fix: changed the positioning of the images, wrapped them in the picture tag in confidentiality.html

--- a/assets/css/confidentiality.css
+++ b/assets/css/confidentiality.css
@@ -71,22 +71,22 @@
 	}
 }
 
-.main-info__img {
-	width: 360px;
+.main-info__img img {
+	max-width: 360px;
 	height: 290px;
 	border-left: 4px solid #4f538c;
 }
 
 @media (max-width: 1024px) {
-	.main-info__img {
-		width: 229px;
+	.main-info__img img {
+		max-width: 229px;
 		height: 185px;
 	}
 }
 
 @media (max-width: 650px) {
-	.main-info__img {
-		width: 100%;
+	.main-info__img img {
+		max-width: 100%;
 		height: 240px;
 	}
 }
@@ -363,16 +363,11 @@
 	gap: 40px;
 }
 
-@media (max-width: 1024px) {
-	.main-network__content {
-		display: block;
-	}
-}
-
 .main-network__links {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	gap: 40px;
 	margin: 0;
 }
 
@@ -520,6 +515,16 @@
 
 .background-figure--first-item {
 	top: 0;
+}
+
+@media (max-width: 1024px) {
+	.main-network__content {
+		display: block;
+	}
+
+	.main-network__links {
+		gap: 0;
+	}
 }
 
 @media (max-width: 425px) {
