--- a/assets/fonts/fonts.css
+++ b/assets/fonts/fonts.css
@@ -24,6 +24,13 @@
 }
 
 @font-face {
+	font-style: italic;
+	font-weight: 600;
+	font-family: 'Source Sans 3';
+	src: url(SourceSans3-SemiBoldItalic.ttf);
+}
+
+@font-face {
 	font-weight: 700;
 	font-family: 'Source Sans 3';
 	src: url(SourceSans3-Bold.ttf);
